--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "i18next": "^23.4.6",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-i18next": "^13.2.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
